@@ -1,3 +1,12 @@
+2007-04-12  Chris Toshok  <toshok@ximian.com>
+
+	* compzilla/src/compzillaControl.cpp: use the new hotness.
+
+	* compzilla/src/compzillaRenderingContext.h: new improved api.
+
+	* compzilla/src/compzillaRenderingContext.cpp: rework this so we
+	don't copy twice, we only ever blit anything in ::Render.
+
 2007-04-12  Alex Graveley  <alex@beatniksoftware.com>
 
 	* compzilla/src/compzillaRenderingContext.cpp: Drop non-thebes,
